# ft_kfs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs  flake.nix  grub.cfg  linker.ld  make_iso.sh  target.json
.cargo/: config.toml
asm/: Cargo.toml
asm/i686-elf/: boot.asm
asm/src/: lib.rs
collections/: Cargo.toml
collections/src/: array_ring.rs  array_str.rs  array_vec.rs  lib.rs
conf/i686-elf/: i686-elf.json  linker.ld
doc/: notes.md
keyboard/: Cargo.toml
keyboard/src/: ergol.rs  lib.rs  qwerty.rs  scancode.rs
kfs/: Cargo.toml  build.rs
kfs/asm/i686-elf/: boot.asm
kfs/src/: main.rs
linker/: flake.nix
log/: Cargo.toml
log/src/: lib.rs
port/: Cargo.toml
port/src/: lib.rs
ps2/: Cargo.toml
ps2/src/: controller.rs  keyboard.rs  lib.rs
src/: main.rs  spinlock.rs
sync/src/: lib.rs
tui/: Cargo.toml
tui/src/: lib.rs  logger.rs  multi_screen.rs  text_buffer.rs
vga/: Cargo.toml
vga/src/: lib.rs  screen.rs
