[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
  "Clément Saad <clement.sqf@gmail.com>",
  "Dorian Burgun <dorian@burgun.dev>",
]

[workspace]
resolver = "2"

members = [
    "kfs",
    "vga",
    "ps2",
    "port",
    "asm",
    "sync", "log", "keyboard", "collections", "tui",
]

[profile.dev]
panic = "abort"
# TODO(Dorian): set back on
# strip = true

[profile.release]
panic = "abort"
