[package]
name = "kfs"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
vga = { path = "../vga" }
port = { path = "../port" }
ps2 = { path = "../ps2" }
log = { path = "../log" }
tui = { path = "../tui" }
keyboard = { path = "../keyboard" }
collections = { path = "../collections" }
